--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,8 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
     <meta
       name="description"
       content="Web site created using create-react-app"
@@ -29,8 +31,21 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>React App</title>
+    <style>
+      body {
+        background-color: #000000 !important;
+        background: #000000 !important;
+      }
+      
+      @media screen and (-webkit-min-device-pixel-ratio: 0) {
+        body {
+          background-color: #000000 !important;
+          background: #000000 !important;
+        }
+      }
+    </style>
   </head>
-  <body>
+  <body style="background-color: #000000; background: #000000;">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
